<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>ee.ria.tara</groupId>
    <artifactId>tara-login-server</artifactId>
    <version>1.7.3</version>
    <name>tara-login-server</name>
    <description>TARA login server</description>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>

        <bouncycastle.version>1.80</bouncycastle.version>
        <elastic-apm.version>1.52.1</elastic-apm.version>
        <ignite.version>2.13.0</ignite.version><!-- TODO AUT-1086 Upgrade to >=2.14.0 when the following issue is
                                                     resolved:
                                                     https://www.mail-archive.com/user@ignite.apache.org/msg33644.html -->
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
        <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
        <mid-rest.version>1.5</mid-rest.version>
        <smart-id.version>2.3</smart-id.version>
        <spring-cloud.version>2024.0.0</spring-cloud.version><!-- Spring Cloud 2024.0.x release train is only compatible with Spring Boot 3.4.x, see table 1 at https://spring.io/projects/spring-cloud -->
        <webeid.version>3.1.1</webeid.version>
        <wiremock.version>3.12.0</wiremock.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>eu.webeid.security</groupId>
            <artifactId>authtoken-validation</artifactId>
            <version>${webeid.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-core</artifactId>
        </dependency>
        <dependency>
            <groupId>co.elastic.apm</groupId>
            <artifactId>apm-agent-api</artifactId>
            <version>${elastic-apm.version}</version>
        </dependency>
        <dependency>
            <groupId>co.elastic.apm</groupId>
            <artifactId>apm-agent-attach</artifactId>
            <version>${elastic-apm.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
        </dependency>
        <dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.ignite</groupId>
            <artifactId>ignite-core</artifactId>
            <version>${ignite.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.ignite</groupId>
            <artifactId>ignite-slf4j</artifactId>
            <version>${ignite.version}</version>
        </dependency>
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>${logstash-logback-encoder.version}</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>commons-compiler</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>${bouncycastle.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>ee.sk.mid</groupId>
            <artifactId>mid-rest-java-client</artifactId>
            <version>${mid-rest.version}</version>
            <exclusions>
                <!-- bcprov-jdk18on is used instead.-->
                <exclusion>
                    <groupId>org.bouncycastle</groupId>
                    <artifactId>bcprov-jdk15on</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ee.sk.smartid</groupId>
            <artifactId>smart-id-java-client</artifactId>
            <version>${smart-id.version}</version>
            <exclusions>
                <!-- bcprov-jdk18on is used instead.-->
                <exclusion>
                    <groupId>org.bouncycastle</groupId>
                    <artifactId>bcprov-jdk15on</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>spring-mock-mvc</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wiremock</groupId>
            <!-- Regular wiremock is incompatible with Spring Boot 3.2, therefore standalone should be used instead (https://github.com/wiremock/wiremock/issues/2395) -->
            <artifactId>wiremock-standalone</artifactId>
            <version>${wiremock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>gitlab</id>
            <url>https://gitlab.com/api/v4/projects/19948337/packages/maven</url>
        </repository>
    </repositories>

    <build>
        <finalName>tara-login</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <!-- Allow only single edition (currently latest is jdk18on) of Bouncy Castle libraries.
                                     Other libraries may reference different editions of the same Bouncy Castle library
                                     (bcprov-jdk15on vs bcprov-jdk18on), but duplicate classes on classpath must be
                                     avoided. -->
                                <bannedDependencies>
                                    <excludes>
                                        <exclude>org.bouncycastle:*</exclude>
                                    </excludes>
                                    <includes>
                                        <include>org.bouncycastle:*-jdk18on</include>
                                    </includes>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <runOrder>random</runOrder>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <environmentVariables>
                        <IGNITE_HOME>${project.build.directory}/ignite</IGNITE_HOME>
                    </environmentVariables>
                    <argLine>
                        -DIGNITE_NO_ASCII=true
                        -DIGNITE_UPDATE_NOTIFIER=false
                        <!--
                          Make necessary JDK APIs available to Ignite according to
                          https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
                          "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
                          TaraSession fields.
                        -->
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        <!-- Ignite aggregates all network interface addresses to form work directory name. When machine
                             has many IPv6 network interfaces, work directory name length may exceed file name length
                             limit. Disable IPv6 usage to mitigate this. -->
                        -Djava.net.preferIPv4Stack=true
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <environmentVariables>
                        <ELASTIC_APM_ENABLED>false</ELASTIC_APM_ENABLED>
                        <IGNITE_HOME>${project.build.directory}/ignite</IGNITE_HOME>
                    </environmentVariables>
                    <jvmArguments>
                        -DIGNITE_NO_ASCII=true
                        -DIGNITE_UPDATE_NOTIFIER=false
                        <!--
                          Make necessary JDK APIs available to Ignite according to
                          https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
                          "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
                          TaraSession fields.
                        -->
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        <!-- Ignite aggregates all network interface addresses to form work directory name. When machine
                             has many IPv6 network interfaces, work directory name length may exceed file name length
                             limit. Disable IPv6 usage to mitigate this. -->
                        -Djava.net.preferIPv4Stack=true
                    </jvmArguments>
                    <image>
                        <env>
                            <BPE_IGNITE_HOME>/tmp/ignite</BPE_IGNITE_HOME>
                            <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
                            <BPE_APPEND_JAVA_TOOL_OPTIONS>
                                -DIGNITE_NO_ASCII=true
                                -DIGNITE_UPDATE_NOTIFIER=false
                                <!--
                                  Make necessary JDK APIs available to Ignite according to
                                  https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
                                  "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
                                  TaraSession fields.
                                -->
                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                                --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                                --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                                --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                                --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                                --add-opens=java.base/java.io=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.util=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                                --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                                --add-opens=java.base/java.time=ALL-UNNAMED
                                --add-opens=java.base/java.net=ALL-UNNAMED
                            </BPE_APPEND_JAVA_TOOL_OPTIONS>
                        </env>
                    </image>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
